virtualbox-ose (4.0.6-dfsg-1) UNRELEASED; urgency=low

  * New upstream release.
  * Adapt 07-vboxnetflt-reference.patch to new upstream version.
  * Update overrides for lintian 2.5.

 -- Felix Geyer <debfx-pkg@fobos.de>  Fri, 22 Apr 2011 11:31:53 +0200

virtualbox-ose (4.0.4-dfsg-1) unstable; urgency=low

  [ Felix Geyer ]
  * New upstream release. (LP: #722431)
  * Drop 30-kernel-2.6.38.diff, applied upstream.
  * Adapt 18-system-xorg.patch to new upstream version.
  * Drop unused lintian overrides.

  [ Patrick Winnertz ]
  * Add if statement around adduser to prevent failure in some cases.
    (Closes: #611604)

 -- Felix Geyer <debfx-pkg@fobos.de>  Fri, 18 Feb 2011 18:09:29 +0100

virtualbox-ose (4.0.2-dfsg-1) unstable; urgency=low

  * New upstream release. (LP: #709027)
    - Ships with a manual and upstream changelog.
      (Closes: #483702, #541127; LP: #243782)
  * Adapt patches for new upstream version.
  * Add new required build-dependencies:
    default-jdk, genisoimage, makeself, texlive-fonts-extra,
    texlive-fonts-recommended, texlive-latex-extra, texlive-latex-recommended.
  * Set VBOX_JAVA_HOME to /usr/lib/jvm/default-java.
  * Add 28-no-selinux-fedora.patch so VirtualBox doesn't try to install
    selinux-fedora/vbox_x11.pp which is stripped by the dfsg-free target.
  * Update install files.
  * Add 29-fix-ftbfs-as-needed.patch to fix FTBFS with ld --as-needed.
  * Automatically generate the pixmap icon from png.
  * Fix the watch file.
  * Update man pages.
  * Support passing through USB 1.1 devices to virtual machines.
  * Update vdfuse for VirtualBox 4.
  * Make the kernel modules buildable with kernel 2.6.38-rc2. (LP: #705593)
    - Add 30-kernel-2.6.38.diff

 -- Felix Geyer <debfx-pkg@fobos.de>  Sat, 29 Jan 2011 20:13:14 +0100

virtualbox-ose (3.2.12-dfsg-1) unstable; urgency=low

  * New upstream release.
  * Drop 03-2.6.37.patch and 24-xserver-19-support.patch, applied upstream.
