@@ -169,17 +169,8 @@ else ifeq ($(INSTALL_XORGCONFD),old)
 	    /usr/lib/X11/xorg.conf.d
 endif
 
-	cp src/VBox/Frontends/VirtualBox/images/OSE/VirtualBox_16px.png \
-	    debian/$(sxname)/usr/share/icons/hicolor/16x16/apps/virtualbox-ose.png
-	cp src/VBox/Frontends/VirtualBox/images/OSE/VirtualBox_32px.png \
-	    debian/$(sxname)/usr/share/icons/hicolor/32x32/apps/virtualbox-ose.png
-	cp src/VBox/Frontends/VirtualBox/images/OSE/VirtualBox_48px.png \
-	    debian/$(sxname)/usr/share/icons/hicolor/48x48/apps/virtualbox-ose.png
-	cp src/VBox/Frontends/VirtualBox/images/OSE/VirtualBox_64px.png \
-	    debian/$(sxname)/usr/share/icons/hicolor/64x64/apps/virtualbox-ose.png
-
-	convert debian/$(sxname)/usr/share/icons/hicolor/32x32/apps/virtualbox-ose.png \
-	    debian/$(sxname)/usr/share/pixmaps/virtualbox-ose.xpm
+	convert debian/$(sxname)/usr/share/icons/hicolor/32x32/apps/virtualbox.png \
+	    debian/$(sxname)/usr/share/pixmaps/virtualbox.xpm
 
 override_dh_fixperms:
 	dh_fixperms
