@@ -1,5 +1,1 @@
-usr/share/icons/hicolor/16x16/apps
-usr/share/icons/hicolor/32x32/apps
-usr/share/icons/hicolor/48x48/apps
-usr/share/icons/hicolor/64x64/apps
 usr/share/pixmaps
