@@ -1,9 +1,0 @@
-[Desktop Entry]
-Name=VirtualBox OSE
-GenericName=PC virtualization solution
-Type=Application
-Comment=Run several virtual systems on a single host computer
-Exec=virtualbox
-TryExec=virtualbox
-Icon=virtualbox-ose
-Categories=Emulator;Utility;
