@@ -1,5 +1,22 @@
-debian/virtualbox-ose-qt.files/virtualbox-ose.desktop /usr/share/applications
+debian/virtualbox-ose-qt.files/virtualbox.desktop /usr/share/applications
 
 out/bin/VirtualBox* /usr/lib/virtualbox
 
 out/bin/nls /usr/share/virtualbox
+
+out/bin/icons/16x16/virtualbox.png /usr/share/icons/hicolor/16x16/apps
+out/bin/icons/32x32/virtualbox.png /usr/share/icons/hicolor/32x32/apps
+out/bin/icons/48x48/virtualbox.png /usr/share/icons/hicolor/48x48/apps
+out/bin/icons/64x64/virtualbox.png /usr/share/icons/hicolor/64x64/apps
+
+out/bin/icons/16x16/virtualbox-*.png /usr/share/icons/hicolor/16x16/mimetypes
+out/bin/icons/24x24/virtualbox-*.png /usr/share/icons/hicolor/24x24/mimetypes
+out/bin/icons/32x32/virtualbox-*.png /usr/share/icons/hicolor/32x32/mimetypes
+out/bin/icons/48x48/virtualbox-*.png /usr/share/icons/hicolor/48x48/mimetypes
+out/bin/icons/64x64/virtualbox-*.png /usr/share/icons/hicolor/64x64/mimetypes
+out/bin/icons/72x72/virtualbox-*.png /usr/share/icons/hicolor/72x72/mimetypes
+out/bin/icons/96x96/virtualbox-*.png /usr/share/icons/hicolor/96x96/mimetypes
+out/bin/icons/128x128/virtualbox-*.png /usr/share/icons/hicolor/128x128/mimetypes
+out/bin/icons/256x256/virtualbox-*.png /usr/share/icons/hicolor/256x256/mimetypes
+
+out/bin/virtualbox.xml /usr/share/mime/packages
