@@ -1,4 +1,4 @@
 ?package(virtualbox-ose-qt):needs="X11" section="Applications/Emulators"\
   title="VirtualBox OSE" longtitle="PC virtualization solution"\
   description="Run several virtual systems on a single host computer"\
-  command="/usr/bin/virtualbox" icon="/usr/share/pixmaps/virtualbox-ose.xpm"
+  command="/usr/bin/virtualbox" icon="/usr/share/pixmaps/virtualbox.xpm"
